fixed collapsable

--- a/src/components/projects/Pannel.scss
+++ b/src/components/projects/Pannel.scss
@@ -1,19 +1,19 @@
+//Pannel.scss
+
 @import "../../styles/variables";
 
 .project {
   height: 100%;
-  //   width: (100% / 3);
   border: 1px solid rgba($color: #707070, $alpha: 0.5);
   position: relative;
+  overflow: hidden;
   cursor: pointer;
 
   transition: width 1s ease-out;
 
   &--expand {
-    width: 100%;
-    display: grid;
-    grid-template-columns: repeat(10, 10%);
-    grid-template-rows: repeat(5, 1fr);
+    width: 150%;
+
     cursor: default;
 
     &__title {
@@ -27,6 +27,9 @@
       grid-area: 1/2/2/5;
 
       transform: rotate(0deg);
+      position: absolute;
+      left: 1.5rem;
+      top: -1.5rem;
     }
   }
   &--noExpand {
@@ -59,29 +62,35 @@
   }
 
   &__logo {
-    grid-column: 7/9;
-
-    background-color: white;
     width: 100%;
     height: 100%;
-
-    font-size: 3rem;
+    object-fit: cover;
+    display: block;
+    &--wrapper {
+      grid-column: 9/11;
+      width: 13rem;
+    }
   }
 
   .container--icons {
-    background-color: $dark-white;
     grid-row: 2;
-    grid-column: 2/7;
+    grid-column: 6/8;
     align-self: center;
-    height: 70%;
+    height: 60%;
+    display: flex;
+    justify-content: space-evenly;
   }
 
   &__landing {
-    grid-area: 3/2/6/9;
-    transform: translateY(-1rem);
-    background-color: $dark-white;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+    border-radius: 5px;
 
-    font-size: 3rem;
+    &--wrapper {
+      grid-area: 3/1/6/10;
+    }
   }
 
   &__github {
@@ -90,5 +99,21 @@
     display: block;
     margin-left: 4rem;
     cursor: pointer;
+  }
+}
+.content {
+  position: absolute;
+  box-sizing: border-box;
+  width: 700px;
+  height: 100%;
+  display: grid;
+  grid-template-columns: repeat(11, 10%);
+  grid-template-rows: repeat(5, 1fr);
+  padding: 2rem;
+
+  &__icons {
+    height: 70%;
+    width: 70%;
+    display: block;
   }
 }
