--- a/src/components/projects/Projects.scss
+++ b/src/components/projects/Projects.scss
@@ -13,8 +13,14 @@
   padding: 1rem;
   position: relative;
   font-family: "Work Sans";
+}
 
+.projects {
+  height: 100%;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
+  margin: 0;
+  padding: 0;
 }
